package com.xinqihd.sns.gameserver.proto;
//排行榜
option java_outer_classname = "XinqiBceArrangeList"; 
message BceArrangeList {
    /**
     * 排行榜类型
     * 0: 总排名
     * 1: 好友排名
     * 2: 公会排名
     * 3: 在线排行
     * 4: 副本排行
     */
    optional int32 rankType = 1 [default = 0];
    /**
     * 类型
     * 0: 战斗力
     * 1: 等级
     * 2: 财富
     * 3: 成就
     * 4: 勋章
     * 5: Score
     */
    optional int32 arrangeType = 2 [default = 0];        
    /**
	 * 过滤类型
	 * 0: 总排行
	 * 1: 日增长
	 * 2: 月增长
     */
	optional int32 filterType = 3 [default = 0];
	optional int32 startRank  = 4 [default = 1];
	optional int32 endRank = 5 [default = 10];
    /**
     * 对于副本，上传bossid 
     */
    optional string bossid = 6;
}
